# cauliflambda

./: Cargo.toml  bind.lc  playground.lc
.github/workflows/: ci.yml
crates/cauliflambda-bin/: Cargo.toml
crates/cauliflambda-bin/src/: diagnostics.rs  main.rs  repl.rs  side_effects.rs
src/: ast.rs  call_by_need.rs  chars.rs  default.rs  diagnostics.rs  evaluation.rs  lib.rs  lowering.rs  main.rs  namefree.rs  parser.rs  parsers.rs  parsing.rs  reducing.rs  syntax.rs
src/evaluation/: beta.rs  church_booleans.rs  church_encoding.rs  church_numerals.rs  definitions.rs  encoding.rs  evaluate.rs  free.rs  macros.rs  options.rs  rename.rs  rename_bound.rs  result.rs  side_effects.rs  substitute.rs  tuple.rs
tests/: factorial.lc  factorial_integration_test.rs  integration_tests.rs  is_even.lc  maybe.lc
