[package]
name = "cauliflambda"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
trait-set = "0.3.0"
unicode-xid = "0.2.4"
winnow = "0.4.6"
fmtastic = { git = "https://github.com/bash/fmtastic.git", branch = "main" }

[workspace]
members = [
    "crates/cauliflambda-bin"
]
